<resources>
    <string name="app_name">WIA-Terminal</string>
    <string name="title_bar_text">智慧园区移动工作平台</string>
    <string name="title_menu_settings">设置</string>
    <string name="title_menu_about">关于我们</string>
    <string name="title_version_update">版本更新</string>
    <string name="title_handwriting">手写签名</string>
    <string name="title_codescan">二维码扫描</string>
    <string name="title_signature">二维码扫描</string>
    <string name="scan_text">扫描数据</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="sure">确定</string>
    <string name="hint">提示</string>
    <string name="setlocation">记录当前位置</string>
    <string name="surelocation">生成shape文件</string>
    <string name="dellocation">删除当前位置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_normal">点击或者上拉加载更多</string>
    <string name="amass">集中器：</string>
    <string name="jname">集中器名称:</string>
    <string name="jaddress">集中器地址:</string>
    <string name="jphone">使用手机号:</string>
    <string name="jweidu">集中器纬度:</string>
    <string name="jjingdu">集中器经度:</string>
    <string name="jstatus">集中器状态:</string>
    <string name="lname">名称</string>
    <string name="llname">名称:</string>
    <string name="mac">mac地址:</string>
    <string name="lid">编号:</string>
    <string name="lweidu">灯控器纬度:</string>
    <string name="ljingdu">灯控器经度:</string>
    <string name="lstatus">灯控器状态:</string>
    <string name="lhuilu">所属回路:</string>
    <string name="ltype">灯源类型:</string>
    <string name="llight">灯源亮度:</string>
    <string name="lv">电压:</string>
    <string name="la">电流:</string>
    <string name="lw">功率:</string>
    <string name="lwyin">功率因数:</string>
    <string name="lcharge">电量:</string>
    <string name="ltemp">温度:</string>
    <string name="qymc">企业名称:</string>
    <string name="lxr">联系人:</string>
    <string name="lxdh">联系电话:</string>
    <string name="dzyj">电子邮件:</string>
    <string name="xmjs">项目建设</string>
    <string name="xmmc">项目名称:</string>
    <string name="tze">投资额:</string>
    <string name="tdxqmj">土地需求面积:</string>
    <string name="mu">亩</string>
    <string name="xmjsnr">项目建设内容:</string>
    <string name="ssqk">税收情况:</string>
    <string name="jyqk">就业情况:</string>
    <string name="yee">营业额:</string>
    <string name="sqsj">申请时间:</string>
    <string name="sqqk">申请情况:</string>
    <string name="shxx">审核信息</string>
    <string name="shr">审核人:</string>
    <string name="shsj">审核时间:</string>
    <string name="sftg">是否通过:</string>
    <string name="shsm">审核说明:</string>
    <string name="xiugai">修改</string>
    <string name="chakan">查看</string>
</resources>
