<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_two_d"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yt.wia.application.TwoDActivity">

    <include android:id="@+id/title_bar"
        layout="@layout/title_bar"/>

    <com.esri.android.map.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_bar"
        mapoptions.ZoomLevel="8"
        mapoptions.MapType="Streets"
        mapoptions.center="40.019367, 116.475648">
    </com.esri.android.map.MapView>


    <Button android:id="@+id/delete_btn"
        style="@style/twodstyle"
        android:drawableLeft="@mipmap/deletelocation"
        android:layout_centerVertical="true"
        android:text="@string/dellocation"/>

    <Button android:id="@+id/location_btn"
        style="@style/twodstyle"
        android:layout_above="@id/delete_btn"
        android:drawableLeft="@mipmap/location"
        android:layout_marginBottom="10dp"
        android:text="@string/setlocation"/>

    <Button android:id="@+id/sure_btn"
        android:layout_below="@id/delete_btn"
        style="@style/twodstyle"
        android:drawableLeft="@mipmap/surelocation"
        android:layout_marginTop="10dp"
        android:text="@string/surelocation"/>

</RelativeLayout>
